# fastapi-react

./: .gitignore  README.md  cookiecutter.json
.github/workflows/: config.yml
scripts/: dev-project.sh  test.sh  test_local.sh
{{cookiecutter.project_slug}}/: .env  docker-compose.yml
{{cookiecutter.project_slug}}/backend/: conftest.py  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/backend/app/: __init__.py  initial_data.py  main.py
{{cookiecutter.project_slug}}/backend/app/alembic/: env.py
{{cookiecutter.project_slug}}/backend/app/api/: dependencies.py
{{cookiecutter.project_slug}}/backend/app/api/api_v1/: api.py  routers.py
{{cookiecutter.project_slug}}/backend/app/api/api_v1/endpoints/: auth.py  users.py
{{cookiecutter.project_slug}}/backend/app/api/api_v1/routers/: users.py
{{cookiecutter.project_slug}}/backend/app/core/: auth.py  celery_app.py  config.py  database.py  security.py  utils.py
{{cookiecutter.project_slug}}/backend/app/crud/: base.py  user.py
{{cookiecutter.project_slug}}/backend/app/models/: user.py
{{cookiecutter.project_slug}}/backend/app/schemas/: user.py
{{cookiecutter.project_slug}}/backend/app/tests/: __init__.py  conftest.py
{{cookiecutter.project_slug}}/backend/app/tests/api/: test_auth.py  test_users.py
{{cookiecutter.project_slug}}/backend/scripts/: prestart.sh
{{cookiecutter.project_slug}}/frontend/: .eslintrc.js  package-lock.json  package.json
{{cookiecutter.project_slug}}/nginx/: nginx.conf
{{cookiecutter.project_slug}}/scripts/: test.sh  test_backend.sh
(+23 files in other folders)
