[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
celery = "^4.4.2"
redis = "^3.5.3"
psycopg2 = "^2.8.6"
pytest = "^6.1.1"
sqlalchemy = "^1.3.20"
uvicorn = "^0.12.2"
bcrypt = "^3.2.0"
pyjwt = "^1.7.1"
emails = "^0.6"
python-multipart = "^0.0.5"
requests = "^2.24.0"
pydantic = "^1.6.1"
jinja2 = "^2.11.2"
alembic = "^1.4.3"
passlib = "^1.7.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
